--- a/src/game.css
+++ b/src/game.css
@@ -82,7 +82,24 @@
   --toggle-bg-on: var(--color-correct);
   --toggle-border-on:var(--color-correct)
 }
-
+#android-button{
+ margin: 0;
+}
+.downloads button svg {
+  width: 24px;
+  fill: var(--color-tone-1);
+}
+.downloads  {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.title {
+  margin-right: auto;
+  text-align: left;
+  padding-left: 5px;
+}
 .nightmode.colorblind {
   --tile-text-color: var(--white);
 }
@@ -124,6 +141,12 @@ button {
   align-items: center;
   text-transform: uppercase;
   -webkit-tap-highlight-color: rgba(0,0,0,0.3);
+}
+
+button.share {
+  width: 100%;
+  height: 32px;
+  background-color: #2196f3;
 }
 
 button:last-of-type {
